--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     
     <title>IEEE Homepage</title>
-    <link rel="icon" type="image/x-icon" href="ieee-logo-main.svg"> 
+    <link rel="icon" type="image/x-icon" href="images/main-logo2.png"> 
 
     <link rel="stylesheet" href="css/style.css">
    
