--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     
     <title>IEEE Homepage</title>
-    <link rel="icon" type="image/x-icon" href="ieee-logo-main.svg"> 
+    <link rel="icon" type="image/x-icon" href="images/IEEE logo.png"> 
 
     <link rel="stylesheet" href="css/style.css">
    
@@ -26,7 +26,7 @@ document.querySelectorAll('.button').forEach(btn => {
 <body>
 
     <div class="container">
-        <img class="avatar" src="images/main-logo2.png" alt="IEEE Logo">
+        <img class="avatar" src="images/IEEE-BAU.png" alt="IEEE Logo">
 
         <h1 style="color:white">Institute of Electrical and Electronics Engineers 2025</h1>
 
