--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ document.querySelectorAll('.button').forEach(btn => {
           </a>
 
           <!-- Event RSVP -->
-          <a class="button event" href="events.html" role="button">
+          <a class="button event" href="html/events.html" role="button">
           <img src="images/calendar.png" alt="Event" class="icon">
           <span>Events</span>
           </a>
