--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     
     <title>IEEE Homepage</title>
-    <link rel="icon" type="image/x-icon" href="images/IEEE logo.png"> 
+    <link rel="icon" type="image/x-icon" href="ieee-logo-main.svg"> 
 
     <link rel="stylesheet" href="css/style.css">
    
@@ -26,7 +26,7 @@ document.querySelectorAll('.button').forEach(btn => {
 <body>
 
     <div class="container">
-        <img class="avatar" src="images/IEEE-BAU.png" alt="IEEE Logo">
+        <img class="avatar" src="images/main-logo2.png" alt="IEEE Logo">
 
         <h1 style="color:white">Institute of Electrical and Electronics Engineers 2025</h1>
 
@@ -37,18 +37,18 @@ document.querySelectorAll('.button').forEach(btn => {
         <div class="button-stack" role="navigation">
 
           
-          <a class="button whatsapp" href="https://chat.whatsapp.com/IGETqlBr2379wCECnMdHIG?mode=ems_copy_c" target="_blank" rel="noopener" role="button">
+          <a class="button whatsapp" href="https://wa.me/1234567890" target="_blank" rel="noopener" role="button">
           <img src="images/whatsapp.png" alt="WhatsApp" class="icon">
           <span>WhatsApp</span>
           </a>
 
           <!-- Instagram -->
-          <a class="button instagram" href="https://www.instagram.com/ieee.bau?igsh=MWpiMmpqZDJwZGZpcQ==" target="_blank" rel="noopener" role="button">
+          <a class="button instagram" href="https://instagram.com/ieee" target="_blank" rel="noopener" role="button">
           <img src="images/instagram.png" alt="instagram" class="icon">
           <span>Instagram</span>
           </a>
 
-          <a class="button email" href="mailto:ieee.bau.lb@gmail.com">
+          <a class="button email" href="mailto:info@ieee.org">
           <img src="images/gmail.png" alt="gmail" class="icon">
           <span>Email Us</span>
           </a>
@@ -61,14 +61,14 @@ document.querySelectorAll('.button').forEach(btn => {
 
 
           <!-- Registration -->
-          <a class="button register" href="https://docs.google.com/forms/d/e/1FAIpQLScbT2gy1gq_svD68gNPnhtdCz8iGqq-UpqHafAMivw-62kuJQ/viewform?usp=header" target="_blank" rel="noopener" role="button">
+          <a class="button register" href="https://ieee.org/register" target="_blank" rel="noopener" role="button">
           <img src="images/registration.png" alt="Registration" class="icon">
             <span>Registration</span>
           </a>
 
           <!-- IEEE Website -->
           <a class="button ieee" href="https://ieee.org" target="_blank" rel="noopener" role="button">
-           <img src="images/IEEE logo.png" alt="IEEE" class="icon">
+           <img src="images/ieee.png" alt="IEEE" class="icon">
             <span>IEEE Website</span>
           </a>
 
