--- a/html/events.html
+++ b/html/events.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>IEEE Events</title>
-<link rel="stylesheet" href="../css/events.css"/>
+<link rel="stylesheet" href="css/events.css"/>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
 </head>
 <body>
