--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ document.querySelectorAll('.button').forEach(btn => {
 
           <!-- IEEE Website -->
           <a class="button ieee" href="https://ieee.org" target="_blank" rel="noopener" role="button">
-           <img src="images/main-logo2 (1).png" alt="IEEE" class="icon">
+           <img src="images/ieee.png" alt="IEEE" class="icon">
             <span>IEEE Website</span>
           </a>
 
