--- a/html/admin.html
+++ b/html/admin.html
@@ -11,7 +11,7 @@
 <body>
   <div id="login-container">
     <h1>Admin Login</h1>
-    <img src="../images/main-logo2.png" alt="IEEE Logo" style="width:200px; margin-bottom: 20px;">
+    <img src="../images/ieee-white.png" alt="IEEE Logo" style="width:300px; margin-bottom: 10px;">
     <input type="email" id="email" placeholder="Email" />
     <input type="password" id="password" placeholder="Password" />
     <button id="loginBtn">Login</button>
