--- a/html/events.html
+++ b/html/events.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8"/>
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <title>IEEE Events</title>
 <link rel="stylesheet" href="../css/events.css"/>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
@@ -10,7 +10,6 @@
 <body>
 <div class="container">
   <h1>Upcoming Events</h1>
-  <a href="admin.html" class="admin-btn" id="adminBtn">Admin Panel</a>
 
   <div class="events" id="events-container"></div>
 
