--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <link rel="icon" type="image/x-icon" href="images/ieee_logo_icon.png"> 
 
     <link rel="stylesheet" href="css/style.css">
-   
+     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;700&display=swap" rel="stylesheet">
+
 
    
   </head>
