--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ document.querySelectorAll('.button').forEach(btn => {
 
 
 
-          <a class="button whatsapp" href="https://wa.me/1234567890" target="_blank" rel="noopener" role="button">
+          <a class="button whatsapp" href="https://chat.whatsapp.com/IGETqlBr2379wCECnMdHIG?mode=ems_copy_c" target="_blank" rel="noopener" role="button">
           <img src="images/whatsapp.png" alt="WhatsApp" class="icon">
           <span>WhatsApp</span>
           </a>
@@ -87,7 +87,7 @@ document.querySelectorAll('.button').forEach(btn => {
           </a>
 
 
-          <!-- IEEE Website -->
+          
           <a class="button ieee" href="https://ieee.org" target="_blank" rel="noopener" role="button">
            <img src="images/ieee_logo_icon.png" alt="IEEE" class="icon">
             <span>IEEE Website</span>
