--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ document.querySelectorAll('.button').forEach(btn => {
           <span>Instagram</span>
           </a>
 
-          <a class="button email" href="ieee.bau.lb@gmail.com">
+          <a class="button email" href="mailto:ieee.bau.lb@gmail.com">
           <img src="images/gmail.png" alt="gmail" class="icon">
           <span>Email Us</span>
           </a>
