--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ document.querySelectorAll('.button').forEach(btn => {
 
 
          
-          <a class="button register" href="https://ieee.org/register" target="_blank" rel="noopener" role="button">
+          <a class="button register" href="https://docs.google.com/forms/d/e/1FAIpQLScbT2gy1gq_svD68gNPnhtdCz8iGqq-UpqHafAMivw-62kuJQ/viewform?usp=header" target="_blank" rel="noopener" role="button">
           <img src="images/registration.png" alt="Registration" class="icon">
             <span>Registration</span>
           </a>
